feat(collector): implement search functionality for asset groups with filtering and pagination